# git-stale-branch-cleaner

./: .gitignore  README.md  pyproject.toml
git_stale_cleaner/: __init__.py  __main__.py  core.py
tests/: test_core.py
