[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-stale-branch-cleaner"
version = "0.2.0"
description = "Find and prune stale or fully-merged Git branches with a clean CLI report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Aslam Ahamed", email = "aslamahamed47@gmail.com" }
]
keywords = ["git", "branch", "cleanup", "developer-tools", "cli", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/intruderfr/git-stale-branch-cleaner"
Repository = "https://github.com/intruderfr/git-stale-branch-cleaner"
Issues = "https://github.com/intruderfr/git-stale-branch-cleaner/issues"

[project.scripts]
git-stale-cleaner = "git_stale_cleaner.__main__:main"

[tool.setuptools.packages.find]
include = ["git_stale_cleaner*"]
exclude = ["tests*"]
